--- a/src/intranetBundle/Resources/views/Default/incomingForms.html.twig
+++ b/src/intranetBundle/Resources/views/Default/incomingForms.html.twig
@@ -132,7 +132,7 @@
    <td>
         <form action='{{ path('intranet_readForm')}}' method='post'>
               <input type="submit" value="VER">
-                <input type="hidden" name="typeF" value="trips">
+                <input type="hidden" name="typeF" value="trip">
                 <input type="hidden" name="id" value="{{form.id}}">
         </form>
    </td>
