--- a/src/intranetBundle/Resources/views/Default/landing.html.twig
+++ b/src/intranetBundle/Resources/views/Default/landing.html.twig
@@ -2,8 +2,14 @@
 
 
 {% block contenido %}
-<h1>Inicio</h1>
 <h2> LANDING PAGE   </h2>
 {% trans %} This is Landing Page {% endtrans %}
 <hr>
+Menu not visible for all => indicate routes?<br><br>
+	<b>Login	 </b>  /<i>language</i>/intranet_logout<br>
+	<b>Channel</b>  /<i>language</i>/channels<br>
+	<b>News	  </b> /<i>language</i>/news<br>
+	<b>Tasks	 </b>  /<i>language</i>/tasks<br>
+  <b>User Management	 </b>  /<i>language</i>/userManagement<br>
+<br>The language can be /es/, /en/ or /fr/
 {% endblock %}
