--- a/src/intranetBundle/Resources/views/Default/news.html.twig
+++ b/src/intranetBundle/Resources/views/Default/news.html.twig
@@ -2,7 +2,7 @@
 
  {% block contenido %}
 
-<i>No estaría mal poder hacer un filtro por canal <br> o mostrar también los canales en los que se haya y hacer click en el nombre de la columna</i><hr>
+<i>{% trans %}message_2{% endtrans %}</i><hr>
 <table border=1>
 <tr>
     <th>DATE</th>
