--- a/src/intranetBundle/Resources/views/Error/error_login.html.twig
+++ b/src/intranetBundle/Resources/views/Error/error_login.html.twig
@@ -1,19 +1,22 @@
 {% extends 'intranetBundle::layout2.html.twig' %}
 
  {% block contenido %}
-Si has llegado aquí es porque no existes compay.
+{% trans %}
+you dont exist
+{% endtrans %}
 <br><br>
-Voy a crearte en la BD.
+{% trans %}
+creating on database
+{% endtrans %}
 <br><br>
 
-LOGIN; NOMBRE; APELLIDOS; LANGUE; ROL; FOTO; notifications
 
 <form action="{{ path('intranet_nonExistingUser') }}" method="post" style="border: 1px solid;width: 500px;">
-      <label class="control-label">Hola {{name}} {{ surname }}</label>
+      <label class="control-label">{% trans %}Hello{% endtrans %} {{name}} {{ surname }}</label><br>
 
       Login: <input type='text' name="myLogin" id="myLogin" value="{{login}}" class="form-control" readonly>
-      Nombre: <input type='text' name="myName" id="myName" value="{{name}}" class="form-control" readonly>
-      Apellidos: <input type='text' id="mySurname"name="mySurname" value="{{surname}}" class="form-control" readonly><BR>
+      {% trans %}Name{% endtrans %} <input type='text' name="myName" id="myName" value="{{name}}" class="form-control" readonly>
+      {% trans %}Surname{% endtrans %} <input type='text' id="mySurname"name="mySurname" value="{{surname}}" class="form-control" readonly><BR>
       <label>{% trans %}Language{% endtrans %}</label>
             <select class="form-control" name="myLang">
               <option value="es">ES</option>
@@ -27,7 +30,7 @@ LOGIN; NOMBRE; APELLIDOS; LANGUE; ROL; FOTO; notifications
       <label class="radio">{% trans %}Notifications{% endtrans %}</label>
                                   <input type='radio' id="myNotification" name="myNotifications" value="1"><label for="myNotification">ON</label>
                                   <input type='radio' id="myNotifications" name="myNotifications" value="0"   checked ><label for="myNotifications">OFF</label><br>
-                                  <input type="submit" value="{% trans %}Modify{% endtrans %}">
+                                  <input type="submit" value="{% trans %}OK{% endtrans %}">
  </form>
 
 {% endblock %}
