--- a/src/intranetBundle/Resources/views/layout.html.twig
+++ b/src/intranetBundle/Resources/views/layout.html.twig
@@ -13,7 +13,7 @@
 
 {% block cabecera %}
     <div id="cabecera">
-      <h1>Aquí irá la imagen de la cabecera</h1>
+      <h1>Here will be the image</h1>
     </div>
 {% endblock %}
 
