--- a/src/intranetBundle/Resources/views/Default/bd.html.twig
+++ b/src/intranetBundle/Resources/views/Default/bd.html.twig
@@ -3,7 +3,7 @@
  {% block contenido %}
 
 
-{{user.nameU}} es {{user.rol}}
+{{user.nameU}} is {{ role }}
 <br><br>
 {{user.getNombreCompleto}}
 {% endblock %}
