--- a/src/intranetBundle/Resources/views/Default/editTask.html.twig
+++ b/src/intranetBundle/Resources/views/Default/editTask.html.twig
@@ -17,11 +17,16 @@
                     {% endif %}
                 {% endfor %}
                 {% if flag==0 %}
-                    <input type='checkbox' name="{{ u.login }}" id="{{ u.login }}" value="{{ u.login }}" >{{ u.login }}<br>
+                    {% if rol!='developer' %}
+                      <input type='checkbox' name="{{ u.login }}" id="{{ u.login }}" value="{{ u.login }}" >{{ u.login }}<br>
+                    {% endif %}
                 {% endif %}
               {% endfor %}
+
+              {% if rol!='developer' %}
                                    <input type="submit" name="update" value="{% trans %}Modify{% endtrans %}">
                                    <input type="submit" name="delete" value="{% trans %}DELETE{% endtrans %}">
                                    <input type="hidden" name="id" value="{{task.id}}">
+              {% endif %}
  </form>
 {% endblock %}
