--- a/src/intranetBundle/Resources/views/layout.html.twig
+++ b/src/intranetBundle/Resources/views/layout.html.twig
@@ -25,6 +25,13 @@
 
 
 {% block body %}
+
+    <div id="newsfeed" style="width: 200px; float: right; margin-top: 100px; margin-right: 100px;">
+        {% block newsfeed %}
+            {{ render(controller('intranetBundle:News:news')) }}
+        {% endblock %}
+    </div>
+
     <div id="contenido">
         {% block contenido %}
         {% endblock %}
