--- a/src/intranetBundle/Resources/views/Default/tasks.html.twig
+++ b/src/intranetBundle/Resources/views/Default/tasks.html.twig
@@ -2,6 +2,11 @@
 
  {% block contenido %}
 
+ {% if rol=='developer' %}
+ <form action="{{ path('intranet_newtask') }}" method="post" style="border: 1px solid;width: 500px;">
+     <input type="submit" name="newTask" value="NEW TASK">
+   </form>
+ {% endif %}<br><br>
 
 <table border=1>
 <tr>
@@ -24,11 +29,6 @@
 </tr>
 {% endfor %}
 </table>
-<br><br>
 
-{% if rol!='developer' %}
-<form action="{{ path('intranet_newtask') }}" method="post" style="border: 1px solid;width: 500px;">
-    <input type="submit" name="newTask" value="NEW TASK">
-  </form>
-{% endif %}
+
 {% endblock %}
