14th Commit GabrielRamos

--- a/src/intranetBundle/Resources/views/Default/tasks.html.twig
+++ b/src/intranetBundle/Resources/views/Default/tasks.html.twig
@@ -15,7 +15,10 @@
     <th style="padding-left: 10px;padding-right: 10px;">DESCRIPTION</th>
     <th style="padding-left: 10px;padding-right: 10px;">WHO CREATE</th>
 </tr>
+
+{% for t in myTasks %}
 {% for new in listTasks %}
+{% if t.idTask==new.id %}
 <tr>
     <td style="padding-left: 10px;padding-right: 10px;">
     <form action='{{ path('intranet_crudtask') }}' method='post'>
@@ -26,8 +29,8 @@
     <td style="padding-left: 10px;padding-right: 10px;">{{ new.title }}</td>
     <td style="padding-left: 10px;padding-right: 10px;">{{ new.content }}</td>
     <td style="padding-left: 10px;padding-right: 10px;">{{ new.whocreate }}</td>
-</tr>
-{% endfor %}
+</tr>{% endif %}
+{% endfor %}{% endfor %}
 </table>
 
 
