14th Commit GabrielRamos

--- a/src/intranetBundle/Resources/views/Error/error_login.html.twig
+++ b/src/intranetBundle/Resources/views/Error/error_login.html.twig
@@ -17,6 +17,7 @@ creating on database
       Login: <input type='text' name="myLogin" id="myLogin" value="{{login}}" class="form-control" readonly>
       {% trans %}Name{% endtrans %} <input type='text' name="myName" id="myName" value="{{name}}" class="form-control" readonly>
       {% trans %}Surname{% endtrans %} <input type='text' id="mySurname"name="mySurname" value="{{surname}}" class="form-control" readonly><BR>
+      {% trans %}Email{% endtrans %} <input type='text' id="myEmail"name="myEmail" value="{{email}}" class="form-control" readonly><BR>
       <label>{% trans %}Language{% endtrans %}</label>
             <select class="form-control" name="myLang">
               <option value="es">ES</option>
