--- a/src/intranetBundle/Resources/views/Default/formHours.html.twig
+++ b/src/intranetBundle/Resources/views/Default/formHours.html.twig
@@ -4,9 +4,8 @@
 <h3>HOURS</h3><br>
  <form action="{{ path('intranet_f') }}" method="post" style="border: 1px solid;width: 500px;">
         <label>Number of hours: </label><input type='number' name="numhours" id="numhours" min="1" max="50"><i>min:1, max:50</i><BR>
-        <label>Between: </label><input type='date' id="betw" name="betw"><BR>
-        <label>and: </label><input type='date' id="and" name="and">
-        <i>default: 1 WEEK, max 3 months</i><BR>
+        <label>Reasons</label><input type="textarea" name="reasons" id="reasons"><br>
+        <label>Ticket</label><input type="text" name="ticket" id="ticket"><br>
                                      <input type="submit" value="Modify">
                                      <input type="hidden" name="typeF" value="hours">
    </form>
