--- a/src/intranetBundle/Resources/views/Default/editHours.html.twig
+++ b/src/intranetBundle/Resources/views/Default/editHours.html.twig
@@ -4,8 +4,8 @@
 <h3>HOURS</h3><br>
  <form action="{{ path('intranet_editForm') }}" method="post" style="border: 1px solid;width: 500px;">
         <label>Number of hours: </label><input type='number' name="numhours" id="numhours" value="{{ f.numhours }}"><BR>
-        <label>Between: </label><input type='date' id="betw" name="betw" value="{{f.date1}}"><BR>
-        <label>and: </label><input type='date' id="and" name="and" value="{{f.date2}}"><BR>
+        <label>Reasons</label><input type="textarea" name="reasons" id="reasons" value={{ f.reasons }}><br>
+        <label>Ticket</label><input type="text" name="ticket" id="ticket" value={{ f.ticket }}><br>
         {% if f.isread==0 %}
                                      <input type="submit" value="Delete" name="delete">
                                      <input type="hidden" name="typeF" value="hours">
